--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "hmpps-template-typescript",
+  "name": "hmpps-remand-and-sentencing",
   "version": "0.0.1",
-  "description": "HMPPS Typescript Template",
-  "repository": "git@github.com:ministryofjustice/hmpps-template-typescript.git",
+  "description": "Hmpps Remand And Sentencing",
+  "repository": "git@github.com:ministryofjustice/hmpps-remand-and-sentencing.git",
   "license": "MIT",
   "scripts": {
     "prepare": "husky install",
