--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "security_audit": "npx audit-ci --config audit-ci.json",
     "int-test": "cypress run --config video=false",
     "int-test-ui": "cypress open",
-    "clean": "rm -rf dist build node_modules stylesheets"
+    "clean": "rm -rf dist build node_modules stylesheets",
+    "generate-prison-api-types": "openapi-typescript https://api-dev.prison.service.justice.gov.uk/v3/api-docs > ./server/@types/prisonApi/index.d.ts"
   },
   "engines": {
     "node": "^18",
@@ -162,6 +163,7 @@
     "mocha-junit-reporter": "^2.2.1",
     "nock": "^13.3.3",
     "nodemon": "^3.0.1",
+    "openapi-typescript": "^6.5.5",
     "prettier": "^3.0.3",
     "prettier-plugin-jinja-template": "^1.1.0",
     "sass": "^1.66.1",
