--- a/feature.env
+++ b/feature.env
@@ -8,3 +8,4 @@ API_CLIENT_SECRET=clientsecret
 SYSTEM_CLIENT_ID=clientid
 SYSTEM_CLIENT_SECRET=clientsecret
 PRISON_API_URL=http://127.0.0.1:9091/prison-api
+COURT_REGISTER_API_URL=http://127.0.0.1:9091/court-register-api
