--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "connect-flash": "^0.1.1",
     "connect-redis": "^7.1.0",
     "csurf": "^1.11.0",
+    "dayjs": "^1.11.10",
     "express": "^4.18.2",
     "express-prom-bundle": "^6.6.0",
     "express-session": "^1.17.3",
