--- a/feature.env
+++ b/feature.env
@@ -2,7 +2,7 @@ PORT=3007
 HMPPS_AUTH_URL=http://127.0.0.1:9091/auth
 TOKEN_VERIFICATION_API_URL=http://127.0.0.1:9091/verification
 TOKEN_VERIFICATION_ENABLED=true
-COMPONENT_API_URL=http://localhost:9091/components
+COMPONENT_API_URL=http://127.0.0.1:9091/components
 COMMON_COMPONENTS_ENABLED=true
 NODE_ENV=development
 API_CLIENT_ID=clientid
