RASS-42 switched to ras api for person details

--- a/feature.env
+++ b/feature.env
@@ -14,3 +14,4 @@ COURT_REGISTER_API_URL=http://127.0.0.1:9091/court-register-api
 MANAGE_OFFENCES_API_URL=http://127.0.0.1:9091/manage-offences-api
 MANAGE_USERS_API_URL=http://127.0.0.1:9091/manage-users-api
 ENVIRONMENT_NAME=dev
+REMAND_AND_SENTENCING_API_URL=http://127.0.0.1:9091/remand-and-sentencing-api
