--- a/package.json
+++ b/package.json
@@ -124,7 +124,8 @@
     "redis": "^4.6.11",
     "superagent": "^8.1.2",
     "url-value-parser": "^2.2.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "validatorjs": "^3.22.1"
   },
   "devDependencies": {
     "@types/bunyan": "^1.8.11",
