--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -61,6 +61,8 @@
   "extends": ["airbnb-base", "plugin:prettier/recommended"],
 
   "rules": {
+    "no-shadow": "off",
+    "@typescript-eslint/no-shadow": "error",
     "no-unused-vars": [
       1,
       {
