--- a/feature.env
+++ b/feature.env
@@ -15,3 +15,4 @@ MANAGE_OFFENCES_API_URL=http://127.0.0.1:9091/manage-offences-api
 MANAGE_USERS_API_URL=http://127.0.0.1:9091/manage-users-api
 ENVIRONMENT_NAME=dev
 REMAND_AND_SENTENCING_API_URL=http://127.0.0.1:9091/remand-and-sentencing-api
+DOCUMENT_MANAGEMENT_API_URL=http://127.0.0.1:9091/document-management-api
