--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "http-errors": "^2.0.0",
     "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
+    "multer": "^1.4.5-lts.1",
     "nocache": "^4.0.0",
     "nunjucks": "^3.2.4",
     "passport": "^0.7.0",
@@ -138,6 +139,7 @@
     "@types/http-errors": "^2.0.4",
     "@types/jest": "^29.5.11",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.10.6",
     "@types/nunjucks": "^3.2.6",
     "@types/passport": "^1.0.16",
