--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -22,4 +22,4 @@ generic-service:
     DOCUMENT_MANAGEMENT_API_URL: "https://document-api.hmpps.service.justice.gov.uk"
 
 generic-prometheus-alerts:
-  alertSeverity: PROD_ALERTS_SEVERITY_LABEL
+  alertSeverity: digital-prison-service
