RASS-196 move to prisoner search

--- a/feature.env
+++ b/feature.env
@@ -17,3 +17,4 @@ MANAGE_USERS_API_URL=http://127.0.0.1:9091/manage-users-api
 ENVIRONMENT_NAME=dev
 REMAND_AND_SENTENCING_API_URL=http://127.0.0.1:9091/remand-and-sentencing-api
 DOCUMENT_MANAGEMENT_API_URL=http://127.0.0.1:9091/document-management-api
+PRISONER_SEARCH_API_URL=http://localhost:9091/prisoner-search-api
