--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "connect-redis": "^7.1.1",
     "csurf": "^1.11.0",
     "dayjs": "^1.11.10",
+    "deepmerge": "^4.3.1",
     "express": "^4.19.2",
     "express-prom-bundle": "^7.0.0",
     "express-session": "^1.18.0",
