--- a/helm_deploy/hmpps-remand-and-sentencing/values.yaml
+++ b/helm_deploy/hmpps-remand-and-sentencing/values.yaml
@@ -1,6 +1,6 @@
 generic-service:
   nameOverride: hmpps-remand-and-sentencing
-  productId: "UNASSIGNED" # productId for the product that this belongs too, i.e. DPS001, see README.md for details
+  productId: "DPS014" # productId for the product that this belongs too, i.e. DPS001, see README.md for details
 
 
   replicaCount: 4
