--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "clean": "rm -rf dist build node_modules stylesheets",
     "rebuild": "npm run clean && npm i && npm run build",
     "generate-prison-api-types": "openapi-typescript https://api-dev.prison.service.justice.gov.uk/v3/api-docs > ./server/@types/prisonApi/index.d.ts",
-    "generate-court-register-types": "openapi-typescript https://court-register-dev.hmpps.service.justice.gov.uk/v3/api-docs > ./server/@types/courtRegisterApi/index.d.ts",
+    "generate-court-register-types": "openapi-typescript https://court-register-api-dev.hmpps.service.justice.gov.uk/v3/api-docs > ./server/@types/courtRegisterApi/index.d.ts",
     "generate-manage-offences-types": "openapi-typescript https://manage-offences-api-dev.hmpps.service.justice.gov.uk/v3/api-docs > ./server/@types/manageOffencesApi/index.d.ts",
     "generate-remand-and-sentencing-api-types": "openapi-typescript https://remand-and-sentencing-api-dev.hmpps.service.justice.gov.uk/v3/api-docs > ./server/@types/remandAndSentencingApi/index.d.ts",
     "generate-document-management-api-types": "openapi-typescript https://document-api-dev.hmpps.service.justice.gov.uk/v3/api-docs > ./server/@types/documentManagementApi/index.d.ts",
