--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "prepare": "husky",
     "watch-ts": "tsc -w",
     "build": "node esbuild/esbuild.config.js --build",
+    "watch-node": "DEBUG=gov-starter-server* nodemon -r dotenv/config --watch dist/ dist/server.js | bunyan -o short",
     "start": "node $NODE_OPTIONS dist/server.js | bunyan -o short",
     "start:dev": "concurrently -k -p \"[{name}]\" -n \"ESBuild,Node\" -c \"yellow.bold,cyan.bold\" \"node esbuild/esbuild.config.js --build --watch\" \"node esbuild/esbuild.config.js --dev-server\"",
     "start-feature": "export $(cat feature.env) && node $NODE_DEBUG_OPTION dist/server.js | bunyan -o short",
@@ -110,6 +111,7 @@
     "csurf": "^1.11.0",
     "dayjs": "^1.11.13",
     "deepmerge": "^4.3.1",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-session": "^1.18.1",
     "govuk-frontend": "^5.7.1",
