--- a/feature.env
+++ b/feature.env
@@ -19,3 +19,4 @@ REMAND_AND_SENTENCING_API_URL=http://127.0.0.1:9091/remand-and-sentencing-api
 DOCUMENT_MANAGEMENT_API_URL=http://127.0.0.1:9091/document-management-api
 PRISONER_SEARCH_API_URL=http://localhost:9091/prisoner-search-api
 CALCULATE_RELEASE_DATES_API_URL=http://localhost:9091/calculate-release-dates-api
+COURT_CASES_RELEASE_DATES_API_URL=http://localhost:9091/court-cases-release-dates-api
