--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -21,6 +21,7 @@ generic-service:
     ADJUSTMENTS_UI_URL: "https://adjust-release-dates.hmpps.service.justice.gov.uk"
     CALCULATE_RELEASE_DATES_API_URL: "https://calculate-release-dates-api.hmpps.service.justice.gov.uk"
     AUDIT_ENABLED: "false"
+    COURT_CASES_RELEASE_DATES_API_URL: "https://court-cases-release-dates-api.hmpps.service.justice.gov.uk"
 
 generic-prometheus-alerts:
   alertSeverity: legacy-replacement-alerts
