--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "generate-document-management-api-types": "openapi-typescript https://document-api-dev.hmpps.service.justice.gov.uk/v3/api-docs > ./server/@types/documentManagementApi/index.d.ts",
     "generate-prisoner-search-api-types": "openapi-typescript https://prisoner-search-dev.prison.service.justice.gov.uk/v3/api-docs > ./server/@types/prisonerSearchApi/index.d.ts",
     "generate-token-verification-api-types": "openapi-typescript https://token-verification-api-dev.prison.service.justice.gov.uk/v3/api-docs > ./server/@types/tokenVerificationApi/index.d.ts",
-    "generate-calculate-release-dates-api-types": "openapi-typescript https://calculate-release-dates-api-dev.hmpps.service.justice.gov.uk/v3/api-docs > ./server/@types/calculateReleaseDatesApi/index.d.ts"
+    "generate-calculate-release-dates-api-types": "openapi-typescript https://calculate-release-dates-api-dev.hmpps.service.justice.gov.uk/v3/api-docs > ./server/@types/calculateReleaseDatesApi/index.d.ts",
+    "generate-court-cases-release-dates-api-types": "openapi-typescript https://court-cases-release-dates-api-dev.hmpps.service.justice.gov.uk/v3/api-docs > server/@types/courtCasesReleaseDatesApi/index.d.ts"
   },
   "engines": {
     "node": "^22",
@@ -116,7 +117,7 @@
     "express-session": "^1.18.1",
     "govuk-frontend": "^5.7.1",
     "helmet": "^8.0.0",
-    "hmpps-court-cases-release-dates-design": "^2.12.0",
+    "hmpps-court-cases-release-dates-design": "^4.1.0",
     "http-errors": "^2.0.0",
     "jwt-decode": "^4.0.0",
     "multer": "^1.4.5-lts.1",
