--- a/package.json
+++ b/package.json
@@ -109,7 +109,7 @@
     "compression": "^1.7.5",
     "connect-flash": "^0.1.1",
     "connect-redis": "^8.0.1",
-    "csurf": "^1.11.0",
+    "csrf-sync": "^4.0.3",
     "dayjs": "^1.11.13",
     "deepmerge": "^4.3.1",
     "dotenv": "^16.4.7",
@@ -117,7 +117,7 @@
     "express-session": "^1.18.1",
     "govuk-frontend": "^5.8.0",
     "helmet": "^8.0.0",
-    "hmpps-court-cases-release-dates-design": "^4.2.0",
+    "hmpps-court-cases-release-dates-design": "^4.3.0",
     "http-errors": "^2.0.0",
     "jwt-decode": "^4.0.0",
     "multer": "^1.4.5-lts.1",
@@ -138,7 +138,6 @@
     "@types/compression": "^1.7.5",
     "@types/connect-flash": "0.0.40",
     "@types/cookie-session": "^2.0.49",
-    "@types/csurf": "^1.11.5",
     "@types/express-session": "^1.18.1",
     "@types/http-errors": "^2.0.4",
     "@types/jest": "^29.5.14",
