--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   },
   "engines": {
     "node": "^22",
-    "npm": "^10"
+    "npm": "^11"
   },
   "jest": {
     "transform": {
@@ -182,8 +182,8 @@
     "typescript": "^5.7.3"
   },
   "overrides": {
-    "csurf": {
-      "cookie": "1.0.2"
+    "@jgoz/esbuild-plugin-typecheck": {
+      "esbuild": "$esbuild"
     }
   }
 }
