--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "@microsoft/applicationinsights-clickanalytics-js": "^3.3.5",
     "@microsoft/applicationinsights-web": "^3.3.5",
     "@ministryofjustice/frontend": "^3.7.0",
+    "@ministryofjustice/hmpps-court-cases-release-dates-design": "^4.4.1",
     "accessible-autocomplete": "3.0.1",
     "agentkeepalive": "^4.6.0",
     "applicationinsights": "^3.5.0",
@@ -117,7 +118,6 @@
     "express-session": "^1.18.1",
     "govuk-frontend": "^5.8.0",
     "helmet": "^8.0.0",
-    "hmpps-court-cases-release-dates-design": "^4.4.0",
     "http-errors": "^2.0.0",
     "jwt-decode": "^4.0.0",
     "multer": "^1.4.5-lts.1",
