--- a/helm_deploy/values-preprod.yaml
+++ b/helm_deploy/values-preprod.yaml
@@ -31,6 +31,7 @@ generic-service:
     penetration-test-ip-2: 167.71.136.237/32
     groups:
       - internal
+      - prisons
       - circleci
 
 generic-prometheus-alerts:
