--- a/package.json
+++ b/package.json
@@ -152,6 +152,7 @@
     "@ministryofjustice/eslint-config-hmpps": "^0.0.1",
     "audit-ci": "^7.1.0",
     "aws-sdk-client-mock": "^4.1.0",
+    "cheerio": "^1.1.0",
     "chokidar": "^3.6.0",
     "concurrently": "^9.2.0",
     "cookie-session": "^2.1.1",
