--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,24 @@
 REDIS_ENABLED=false
-TOKEN_VERIFICATION_ENABLED=false
-
 # Credentials for allowing user access
-AUTH_CODE_CLIENT_ID=hmpps-typescript-template
-AUTH_CODE_CLIENT_SECRET=clientsecret
-
+AUTH_CODE_CLIENT_ID="XXX_AUTH_CODE_CLIENT_ID_FROM_DEV_K8S_SECRETS_XXX"
+AUTH_CODE_CLIENT_SECRET="XXX_AUTH_CODE_CLIENT_SECRET_FROM_DEV_K8S_SECRETS_XXX"
 # Credentials for API calls
-CLIENT_CREDS_CLIENT_ID=hmpps-typescript-template-system
-CLIENT_CREDS_CLIENT_SECRET=clientsecret
+CLIENT_CREDS_CLIENT_ID="XXX_CLIENT_CREDS_CLIENT_ID_FROM_DEV_K8S_SECRETS_XXX"
+CLIENT_CREDS_CLIENT_SECRET="XXX_CLIENT_CREDS_CLIENT_SECRET_FROM_DEV_K8S_SECRETS_XXX"
+
+HMPPS_AUTH_URL="https://sign-in-dev.hmpps.service.justice.gov.uk/auth"
+TOKEN_VERIFICATION_API_URL="https://token-verification-api-dev.prison.service.justice.gov.uk"
+MANAGE_OFFENCES_API_URL="https://manage-offences-api-dev.hmpps.service.justice.gov.uk"
+PRISON_API_URL="https://prison-api-dev.prison.service.justice.gov.uk"
+PRISONER_SEARCH_API_URL="https://prisoner-search-dev.prison.service.justice.gov.uk"
+COURT_CASES_RELEASE_DATES_API_URL="https://court-cases-release-dates-api-dev.hmpps.service.justice.gov.uk"
+DIGITAL_PRISON_SERVICES_URL="https://digital-dev.prison.service.justice.gov.uk"
+COURT_REGISTER_API_URL="https://court-register-api-dev.hmpps.service.justice.gov.uk"
+ENVIRONMENT_NAME="DEV"
+COMPONENT_API_URL="https://frontend-components-dev.hmpps.service.justice.gov.uk"
+COMMON_COMPONENTS_ENABLED="true"
+REMAND_AND_SENTENCING_API_URL="https://remand-and-sentencing-api-dev.hmpps.service.justice.gov.uk"
+DOCUMENT_MANAGEMENT_API_URL="https://document-api-dev.hmpps.service.justice.gov.uk"
+ADJUSTMENTS_UI_URL="https://adjustments-dev.hmpps.service.justice.gov.uk"
+CALCULATE_RELEASE_DATES_API_URL="https://calculate-release-dates-api-dev.hmpps.service.justice.gov.uk"
+AUDIT_ENABLED="false"
