--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -26,6 +26,8 @@ generic-service:
     AUDIT_ENABLED: "false"
     COURT_CASES_RELEASE_DATES_API_URL: "https://court-cases-release-dates-api-dev.hmpps.service.justice.gov.uk"
 
+  scheduledDowntime:
+    enabled: true
   # Switches off the allow list in the DEV env only.
   allowlist: null
 generic-prometheus-alerts:
