RASS-425: Ignore accessibility test reports in .gitignore and add in workflow

--- a/.github/workflows/node_integration_tests.yml
+++ b/.github/workflows/node_integration_tests.yml
@@ -65,6 +65,7 @@ jobs:
             coverage/
             test_results/
             ctrf/
+            a11y-report.txt
       - name: publish test report
         if: ${{ !cancelled() && github.event.repository.visibility == 'public' }}
         uses: dorny/test-reporter@v2
