--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -23,7 +23,7 @@ generic-service:
     PRISONER_SEARCH_API_URL: "https://prisoner-search-dev.prison.service.justice.gov.uk"
     ADJUSTMENTS_UI_URL: "https://adjustments-dev.hmpps.service.justice.gov.uk"
     CALCULATE_RELEASE_DATES_API_URL: "https://calculate-release-dates-api-dev.hmpps.service.justice.gov.uk"
-    AUDIT_ENABLED: "false"
+    AUDIT_ENABLED: "true"
     COURT_CASES_RELEASE_DATES_API_URL: "https://court-cases-release-dates-api-dev.hmpps.service.justice.gov.uk"
     RECORD_RECALLS_UI_URL: "https://record-a-recall-dev.hmpps.service.justice.gov.uk"
     FEATURES_VIEW_ONLY_ENABLED: 'false'
