--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -25,6 +25,7 @@ generic-service:
     RECORD_RECALLS_UI_URL: "https://record-a-recall.hmpps.service.justice.gov.uk"
     BOOK_SECURE_MOVE_UI_URL: "https://bookasecuremove.service.justice.gov.uk"
     BOOK_VIDEO_LINK_UI_URL: "https://book-a-video-link.prison.service.justice.gov.uk"
+    FEATURES_FILTER_COURT_CASES_ENABLED: 'false'
 
 generic-prometheus-alerts:
   alertSeverity: legacy-replacement-alerts
